edited responsive.css to look better, and tried to fix skrollr JS problem on mobile, lots of issues with displaying content still..

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
 @media screen and (max-width: 480px) {  
-	body  {background: navy;} 
-	#logo {width: 300px; height:  30px; padding-top: 20px; margin-top: 30px;} 
+	
+	#logo {  width: 200px; height:  30px;  } 
 } 
